RESOLVED FIXED309726
color: initial is incorrect with dark appearance
https://bugs.webkit.org/show_bug.cgi?id=309726
Summary color: initial is incorrect with dark appearance
Kiet Ho
Reported 2026-03-11 15:44:18 PDT
color: initial is incorrect with dark appearance
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-11 15:44:25 PDT
Kiet Ho
Comment 2 2026-03-11 16:28:40 PDT
Kiet Ho
Comment 3 2026-03-17 10:49:31 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/58560
EWS
Comment 4 2026-03-17 13:50:40 PDT
Committed 309430@main (678dffbdeee1): <https://commits.webkit.org/309430@main> Reviewed commits have been landed. Closing PR #60407 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.