color: initial is incorrect with dark appearance rdar://172320282 https://bugs.webkit.org/show_bug.cgi?id=309726

Reviewed by Antti Koivisto.

The generated code to assign initial value to "color" property uses
ComputedStyleProperties::initialColor(), which returns black regardless
of the used color scheme. Therefore, color: initial on an dark color scheme
page would result in black text on dark background.

This patch adds a custom initial function for "color" property. The function
sets its value to CanvasText, the initial color according to spec. It then
gets resolved to the appropriate color depending on the used color scheme.

Tests: imported/w3c/web-platform-tests/css/css-color-adjust/rendering/dark-color-scheme/color-scheme-color-initial-affected-by-color-scheme-property.html
       imported/w3c/web-platform-tests/css/css-color-adjust/rendering/dark-color-scheme/color-scheme-color-initial-affected-by-meta-color-scheme-dynamic.html
       imported/w3c/web-platform-tests/css/css-color-adjust/rendering/dark-color-scheme/color-scheme-visited-link-initial.html

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-color-adjust/rendering/dark-color-scheme/color-scheme-color-initial-affected-by-color-scheme-property-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-color-adjust/rendering/dark-color-scheme/color-scheme-color-initial-affected-by-color-scheme-property.html: Renamed from LayoutTests/imported/w3c/web-platform-tests/css/css-color-adjust/rendering/dark-color-scheme/color-scheme-color-property.html.
* LayoutTests/imported/w3c/web-platform-tests/css/css-color-adjust/rendering/dark-color-scheme/color-scheme-color-initial-affected-by-meta-color-scheme-dynamic-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-color-adjust/rendering/dark-color-scheme/color-scheme-color-initial-affected-by-meta-color-scheme-dynamic.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-color-adjust/rendering/dark-color-scheme/color-scheme-color-property-expected.txt:
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/style/StyleBuilderCustom.h:
(WebCore::Style::BuilderCustom::applyInitialColor):
    - Duplicate logic in BuilderCustom::applyValueColor to set color to CanvasText.

* Source/WebCore/style/computed/StyleComputedStyleProperties+InitialCustomInlines.h:
(WebCore::Style::ComputedStyleProperties::initialColor):
    - Remove this method; it's only used to initialize Style::InheritedData,
      and the return value is misleading anyway.

* Source/WebCore/style/computed/data/StyleInheritedData.cpp:
(WebCore::Style::InheritedData::InheritedData):

Canonical link: https://commits.webkit.org/309430@main