Source/WebCore/style/computed/StyleComputedStyleProperties+InitialCustomInlines.h
@@ -100,11 +100,6 @@ constexpr SVGGlyphOrientationHorizontal ComputedStyleProperties::initialGlyphOri
     return SVGGlyphOrientationHorizontal::Degrees0;
 }
 
-inline WebCore::Color ComputedStyleProperties::initialColor()
-{
-    return WebCore::Color::black;
-}
-
 constexpr LineWidth ComputedStyleProperties::initialBorderBottomWidth()
 {
     return LineWidth { 3.0f };
